# -

./: CITATION.cff  LICENSE.ml-template  README.md  pyproject.toml
data/: README.md
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: README.md  template.sh
installation/docker-amd64-cuda/CSCS-Clariden-setup/: README.md
installation/docker-amd64-cuda/CSCS-Clariden-setup/example-submit-scripts/: minimal.sh  remote-development.sh  test-interactive.sh  unattended-distributed.sh  unattended.sh
installation/docker-amd64-cuda/EPFL-SCITAS-setup/: README.md
installation/docker-amd64-cuda/EPFL-SCITAS-setup/example-submit-scripts/: minimal.sh  remote-development.sh  unattended-distributed.sh  unattended.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/example-submit-scripts/: minimal.sh  remote-development.sh  unattended.sh
installation/docker-amd64-cuda/from-scratch-template/: environment.yml
outputs/: README.md
reproducibility-scripts/: README.md  train-sweep.yaml  train.sh
src/ASVSPOOF2019_HW/: train.py
src/ASVSPOOF2019_HW/configs/: default.yaml  setup.yaml
src/ASVSPOOF2019_HW/utils/: __init__.py  config.py  graduator.py  seeding.py
src/Dataparser/: Audio_dataloader.py  Audio_dataset.py  Audio_dataset_grading.py
src/Model/: Block.py  LCNN.py  MFM.py
src/Training/: Run.py  __init__.py  evaluate_one_epoch.py  train_one_epoch.py
template/: template-variables.env
(+30 files in other folders)
