[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ASVSPOOF2019_HW"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/ASVSPOOF2019_HW"]

[tool.isort]
known_third_party = ["wandb"]
